--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=helloSpringDataJPA
 
-# context path:  http://localhost:8080/helloSpringDataJpa
-server.servlet.context-path=/helloSpringDataJpa
+# context path:http://localhost:8080/helloSpringDataJpa
+#server.servlet.context-path=/helloSpringDataJpa
 
 # === DataSource ===
-spring.datasource.url=jdbc:mysql://localhost:3306/sales?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_assignment?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=cseadmin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -20,8 +20,13 @@ spring.sql.init.encoding= UTF-8
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
+
 # After the ddl-auto execution, data.sql is executed and the data is applied
 spring.jpa.defer-datasource-initialization=true
 
 # === Logging ===
 logging.level.org.example=trace
+
+#spring.security.user.name=alice
+#spring.security.user.password=alicepw
+#spring.security.user.roles=USER, ADMIN
